[metadata]
name = rancher-net-glue
summary = Rancher Net Glue Code
description-file =
    README.md
author = niusmallnan
author-email = zhibo@rancher.com
classifier =
    Environment :: RancherLabs
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[files]
packages =
   rancher_net_glue

[entry_points]
console_scripts =
    neutron-glue = rancher_net_glue.neutron_glue.cli:main
